--- a/src/app/features/pages/login/login.css
+++ b/src/app/features/pages/login/login.css
@@ -8,7 +8,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100vw;
-    height: 800px;
+    height: 100vh;
+    overflow-y: auto;
     padding: 30px;
 }
 h1{
