--- a/src/app/features/auth/pages/cadastro/cadastro.css
+++ b/src/app/features/auth/pages/cadastro/cadastro.css
@@ -4,16 +4,21 @@
   align-items: center;
   background-color: black;
   width: 100vw;
-  height: 100vh
+  height: 100vh;
+
+
 
 }
 .container-box{
-  background-image: url('./../../../../../public/barberBackNew.jpg');
+  background-image: url('./../../../../../../public/barberBackNew.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  width: 50vw;
+  width: 100vw;
   height: 100vh;
-  padding-top: 30px;
+  width: 50vw;
+  display: block;
+
+ /*} padding-top: 30px;  */
 
 }
 .formulario{
