--- a/src/app/features/auth/pages/login/login.css
+++ b/src/app/features/auth/pages/login/login.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('./../../../../../public/barberBackNew.jpg');
+    background-image: url('./../../../../../../public/barberBackNew.jpg');
    justify-content: center;
     background-repeat: no-repeat;
     background-size: cover;
