--- a/src/app/features/auth/pages/cadastro/cadastro.html
+++ b/src/app/features/auth/pages/cadastro/cadastro.html
@@ -5,7 +5,7 @@
 
 
 
-  <form [formGroup]="form" (ngSubmit)="submit()">
+  <form class="container-right" [formGroup]="form" (ngSubmit)="submit()">
    <div class="input-container">
         <label for="">Imagem da Barbearia</label>
         <input
@@ -135,7 +135,9 @@
     <button class="btn-login" >
       Cadastrar
     </button>
-     <a href="/">logar</a>
+    <div class="linkA" >
+     <a href="/">Se ja tem conta? Entrar</a>
+     </div>
     </form>
     <div>
 
