--- a/src/app/dashboard/pages/principal/dashboard/dashboard.css
+++ b/src/app/dashboard/pages/principal/dashboard/dashboard.css
@@ -3,7 +3,23 @@
   height: 100vh;
   overflow-y: auto;
   padding: 30px;
-  background-color: black;
+  background-color: rgb(43, 40, 40);
   color: #fff;
 
+}
+
+.btn-logout{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #00ff;
+  padding: 8px;
+  border-radius: 8px;
+  color: black;
+  width: 80px;
+  margin-top: 20px;
+  border: none;
+  cursor: pointer
+;
 }
