--- a/src/app/features/auth/pages/login/login.css
+++ b/src/app/features/auth/pages/login/login.css
@@ -68,23 +68,26 @@ input{
     border: none;
 ;
 }
+
 }
 
-@media screen and (min-width: 576px){
+@media screen and (max-width: 576px){
  .container{
   height: 100vh;
  }
-}
 
-@media screen and (min-width: 768px){
 
 }
 
-@media screen and (min-width: 992px){
+@media screen and (max-width: 768px){
 
 }
 
-@media screen and (min-width: 1200px){
+@media screen and (max-width: 992px){
+
+}
+
+@media screen and (min-width: 1000px){
 
 }
 
