--- a/src/app/dashboard/pages/perfil/perfil/perfil.css
+++ b/src/app/dashboard/pages/perfil/perfil/perfil.css
@@ -1,18 +1,38 @@
 .container{
-  width: 100%;
-  height: 100%;
-  display: flex;
+  width: 100vw;
+  height: 100vh;
+  display: block;
   flex-direction: column;
+  overflow-y:auto;
   background-color: rgb(43, 40, 40);
+  padding: 20px;
+}
+.loading{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(43, 40, 40.9);
+  color: #00ff;
+  font-size: large;
+  z-index: 100;
+}
+h1{
+  color: #fff;
+  font-size: large;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .form-input{
   display: flex;
   width: 100%;
+  color: #fff;
   flex-direction: column;
   align-items: start;
   justify-content: center;
-  margin: 10px;
+  margin-bottom: 10px;
 
 }
 .form-input input{
@@ -30,7 +50,7 @@
   align-items: center;
   justify-content: center;
   padding: 10px;
-  margin: 10px;
+
   border-radius: 10px;
   background-color: #00ff;
 }
